# DailyReports

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: daily-report.yml
config/: default_config.json  research-profile.md
daily_research_report/: __init__.py  cli.py  config.py  fetchers.py  models.py  notifiers.py  ranker.py  renderer.py  state.py  utils.py
scripts/: Register-DailyReportTask.ps1  run_daily_report.sh
skills/daily-reports/: SKILL.md
skills/daily-reports/agents/: openai.yaml
skills/daily-reports/references/: project.md  source-map.md
skills/daily-reports/scripts/: paper_history.py  run_daily_report.ps1
tests/: test_ranker.py  test_renderer.py  test_state.py
