[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-research-report"
version = "0.1.0"
description = "Daily frontier paper and AI lab news reporter for large-small model collaboration and agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daily Research Report Maintainers" }]
dependencies = []

[project.scripts]
daily-research-report = "daily_research_report.cli:main"

[tool.setuptools.packages.find]
include = ["daily_research_report*"]
